working on pipe

--- a/github/workflows/storybook.yml
+++ b/github/workflows/storybook.yml
@@ -3,7 +3,7 @@ name: Deploy Angular App to GitHub Pages
 on:
   push:
     branches:
-      - storybook   
+      - main   
 
 jobs:
   build-and-deploy:
