--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       # Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       # Build Angular app
       - name: Build Angular App
