--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Configure npm for GitHub Packages
         run: |
           echo "@saad-ihhn:registry=https://npm.pkg.github.com" > ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.TOKEN_ACCESS }}" >> ~/.npmrc
 
       # Install dependencies
       - name: Install dependencies
